--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Music Is Fun!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-
+    <link rel="stylesheet" href="itunes.min.css">
 </head>
 
 <body>
@@ -19,12 +19,27 @@
         </div>
     </form>
     <div id="songs">
+        <h3>Music Results for <span id=searchkey>SearchKey</span></h3>
+        <div class="container-flex">
+            <div class="row d-md-flex justify-center justify-content-around p-2 m-4" id="flxRow">
+                <h3 id="placeHolder"></h3>
+            </div>
+            <br>
+        </div>
+
+        <div class="col-sm-6"></div>
+        <div class="col-sm-6"></div>
+
+
+
+
+
 
     </div>
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="itunes-service.js"></script>
-    <script src="itunes-controller.js"></script>
-    <script src="app.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js "></script>
+    <script src="itunes-service.js "></script>
+    <script src="itunes-controller.js "></script>
+    <script src="app.js "></script>
 </body>
 
 </html>
