--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </form>
     <div id="songs">
-        <h3>Music Results for <span id=searchkey>SearchKey</span></h3>
+        <h3>Music Results for <span id="searchkey">...</span></h3>
         <div class="container-flex">
             <div class="row d-md-flex justify-center justify-content-around p-2 m-4" id="flxRow">
                 <h3 id="placeHolder"></h3>
