--- a/index.html
+++ b/index.html
@@ -20,20 +20,13 @@
     </form>
     <div id="songs">
         <h3>Music Results for <span id="searchkey">...</span></h3>
+        <h3 id="placeHolder">...</h3>
         <div class="container-flex">
             <div class="row d-md-flex justify-center justify-content-around p-2 m-4" id="flxRow">
-                <h3 id="placeHolder"></h3>
+
             </div>
             <br>
         </div>
-
-        <div class="col-sm-6"></div>
-        <div class="col-sm-6"></div>
-
-
-
-
-
 
     </div>
     <script src="https://code.jquery.com/jquery-2.2.3.min.js "></script>
